First pass at some types

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,13 @@
-name = "api"
+name = "tempest-micropub"
 main = "src/index.ts"
 compatibility_date = "2024-01-17"
+
+account_id = "d9c1c6fe41907455f2a1709de422b29d"
+
+[[d1_databases]]
+binding = "DB" # i.e. available in your Worker on env.DB
+database_name = "prod-tempest"
+database_id = "c7113453-511b-4b1f-a1f4-867afc4a16aa"
 
 # Variable bindings. These are arbitrary, plaintext strings (similar to environment variables)
 # Note: Use secrets to store sensitive data.
@@ -16,9 +23,9 @@ compatibility_date = "2024-01-17"
 
 # Bind an R2 Bucket. Use R2 to store arbitrarily large blobs of data, such as files.
 # Docs: https://developers.cloudflare.com/r2/api/workers/workers-api-usage/
-# [[r2_buckets]]
-# binding = "MY_BUCKET"
-# bucket_name = "my-bucket"
+[[r2_buckets]]
+binding = "MEDIA"
+bucket_name = "tempest-files"
 
 # Bind a Queue producer. Use this binding to schedule an arbitrary task that may be processed later by a Queue consumer.
 # Docs: https://developers.cloudflare.com/queues/get-started
